--- a/FitnessTracker_LunaVonBesser/.gitattributes
+++ b/FitnessTracker_LunaVonBesser/.gitattributes
@@ -1,2 +1,5 @@
 *.java linguist-language=Java
 *.html linguist-documentation
+*.css linguist-vendored
+*.json linguist-vendored
+*.xml linguist-vendored
